--- a/src/main/resources/com/andre/dojo/javafx_contact_manager/export-view.fxml
+++ b/src/main/resources/com/andre/dojo/javafx_contact_manager/export-view.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -16,17 +15,20 @@
             <children>
                 <VBox prefHeight="67.0" prefWidth="187.0">
                <children>
-                        <Label prefHeight="36.0" prefWidth="146.0" text="  Address File Saved" textFill="WHITE" />
+                        <Label prefHeight="36.0" prefWidth="146.0" text="  Address File Saved " textFill="WHITE" />
                </children>
                 </VBox>
                 <VBox prefHeight="71.0" prefWidth="606.0">
-                    <children>
-                        <TextField fx:id="address" disable="true" prefHeight="30.0" prefWidth="593.0" styleClass="field-disable" stylesheets="@style.css">
-                            <VBox.margin>
-                                <Insets bottom="3.0" top="3.0" />
-                            </VBox.margin>
-                        </TextField>
-                    </children>
+               <children>
+                  <Label fx:id="address" prefHeight="39.0" prefWidth="570.0" styleClass="field-disable" text="Label" textFill="WHITE">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </Label>
+               </children>
                 </VBox>
             </children>
         </HBox>
@@ -35,9 +37,9 @@
       <Label fx:id="pesan1" layoutX="266.0" layoutY="270.0" prefHeight="20.0" prefWidth="335.0" text="You can also load data from file." textFill="#00ff22" />
       <TableView fx:id="tableView" layoutX="104.0" layoutY="311.0" prefHeight="386.0" prefWidth="723.0">
         <columns>
-          <TableColumn fx:id="accountIdColumn" prefWidth="53.0" text="  Id" />
-          <TableColumn fx:id="accountNameColumn" prefWidth="191.0" text="  Account Name" />
-            <TableColumn fx:id="accountURLColumn" prefWidth="141.0" text="  URL" />
+          <TableColumn fx:id="accountIdColumn" prefWidth="136.0" text="  Id" />
+          <TableColumn fx:id="accountNameColumn" prefWidth="167.0" text="  Account Name" />
+            <TableColumn fx:id="accountURLColumn" prefWidth="130.0" text="  URL" />
             <TableColumn fx:id="accountUsernameColumn" prefWidth="141.0" text="  Username" />
             <TableColumn fx:id="accountPasswordColumn" prefWidth="141.0" text="  Password" />
         </columns>
