--- a/src/main/resources/com/andre/dojo/javafx_contact_manager/hello-view.fxml
+++ b/src/main/resources/com/andre/dojo/javafx_contact_manager/hello-view.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -26,11 +27,7 @@
                   <String fx:value="login-field" />
                   <String fx:value="text-input" />
                </styleClass></TextField>
-            <TextField fx:id="password" layoutX="169.0" layoutY="195.0" prefHeight="32.0" prefWidth="266.0" promptText="Password" AnchorPane.leftAnchor="169.0" AnchorPane.rightAnchor="169.0">
-               <styleClass>
-                  <String fx:value="login-field" />
-                  <String fx:value="text-input" />
-               </styleClass></TextField>
+            <PasswordField fx:id="password" layoutX="169.0" layoutY="195.0" prefHeight="32.0" prefWidth="262.0" promptText="Password" styleClass="login-field" />
             <Button fx:id="btnLogin" layoutX="169.0" layoutY="239.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="260.0" styleClass="btn-login" text="Login" AnchorPane.leftAnchor="169.0" AnchorPane.rightAnchor="169.0">
                <font>
                   <Font name="System Bold" size="13.0" />
